Add Quinns annotations for TRACK

--- a/code/package.json
+++ b/code/package.json
@@ -25,6 +25,8 @@
   "homepage": "https://github.com/atulmy/crate#readme",
   "dependencies": {},
   "devDependencies": {
+    "@babel/cli": "^7.10.3",
+    "@babel/core": "^7.10.3",
     "concurrently": "^4.1.0"
   }
 }
